Fix redundant margin on tablet

--- a/packages/user-interface/src/components/detail-list/detail-list.module.scss
+++ b/packages/user-interface/src/components/detail-list/detail-list.module.scss
@@ -36,4 +36,8 @@
     background: none;
     color: var(--nlportal-account-detail-button-color, hsl(207 80% 35%));
   }
+
+  @include breakpoint(tablet) {
+    margin-block-end: 0;
+  }
 }
